feat: Update image download method to use URL class for better handling of special characters